// Copyright 2022 The AmazeChain Authors
// This file is part of the AmazeChain library.
//
// The AmazeChain library is free software: you can redistribute it and/or modify
// it under the terms of the GNU Lesser General Public License as published by
// the Free Software Foundation, either version 3 of the License, or
// (at your option) any later version.
//
// The AmazeChain library is distributed in the hope that it will be useful,
// but WITHOUT ANY WARRANTY; without even the implied warranty of
// MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the
// GNU Lesser General Public License for more details.
//
// You should have received a copy of the GNU Lesser General Public License
// along with the AmazeChain library. If not, see <http://www.gnu.org/licenses/>.

syntax = "proto3";
package sync_bp;
option go_package = "github.com/amazechain/amc/api/protocol/sync_pb";

import "types_pb/types.proto";

message BodiesByRangeRequest {
  types_pb.H256 start_block_number = 1;
  uint64 count = 2;
  uint64 step = 3;
}

message HeadersByRangeRequest {
  types_pb.H256 start_block_number = 1;
  uint64 count = 2;
  uint64 step = 3;
}

// todo
message Metadata {
  uint64 seq_number = 1;
}

// todo
message Ping {
  uint64 seq_number = 1;
}

//v2
message Status {
  //  string version = 1;
  types_pb.H256 genesisHash = 1;
  types_pb.H256 currentHeight = 2;
}

message ForkData {
  types_pb.H256 current_version = 1;
  types_pb.H256 genesis_validators_root = 2;
}
